fixed header spacing

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
 
 }
 
+#header {
+    position: absolute;
+    text-align: center;
+    margin-bottom: 2%;
+}
+/*
 #greeting {
     position: fixed;
     width: 500px;
@@ -25,6 +31,8 @@ body {
     margin-left: -250px;
     
 }
+*/
+
 a:link, a:visited {
     color: white;
     text-decoration: none;
@@ -41,14 +49,20 @@ a:link, a:visited {
     width: 500px;
     height: 200px;
     left: 50%;
-    margin-top: 150px;
+    /* margin-top: 150px;
+    */
+    margin-top: 5%;
     margin-left: -250px;
 }
+
+/*
 #date{
     position:fixed;
     margin-left: 620px;
 
 }
+*/
+
 #mood{
     position: fixed;
     left: 50%;
